--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,2 +1,69 @@
-/**/
+.input  {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    font-size: 1.1em;
+}
+body {
+    height: 100vh;
+}
 
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.page-title {
+    border-bottom: 1px solid rgba(0,0,0,0.8);
+    margin-bottom: 1rem;
+}
+
+.ui-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    margin-bottom: 1rem;
+    overflow: auto;
+}
+
+.parameters-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 8px;
+    flex: 1;
+    overflow: auto;
+}
+
+.params {
+    flex: 1;
+    align-self: stretch;
+    border-top: 1px solid rgba(0,0,0,0.8);
+    border-bottom: 1px solid rgba(0,0,0,0.8);
+    overflow: auto;
+    padding: 0.8rem;
+}
+
+.params {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.result {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    flex: 1;
+    background-color: pink;
+    border-left: 1px solid rgba(0,0,0,0.4);
+}
+
+.result-container {
+    border-top: 1px solid rgba(0,0,0,0.8);
+    border-bottom: 1px solid rgba(0,0,0,0.8);
+    padding: 0.8rem;
+    align-self: stretch;
+    flex: 1;
+}
