--- a/www/css/result.css
+++ b/www/css/result.css
@@ -1,12 +1,22 @@
 .api-result {
     display: flex;
     flex-direction: column;
+    background-color: ghostwhite;
+}
+.result {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 0.5rem 0.75rem;
+    overflow: scroll;
+    white-space: nowrap;
+}
+.result-title {
+    color: gray;
 }
 .result-container {
     flex: 1;
-    background-color: ghostwhite;
-    padding: 0.5rem 0.75rem;
-    overflow: scroll;
+    position: relative;
 }
 #back-to-form {
     padding: 1rem 0;
@@ -17,10 +27,32 @@
     gap: 0.5rem;
 }
 
+.loader {
+    --size: 4rem;
+    display: block;
+    border: 6px solid lightgray;
+    border-top: 6px solid #0d6efd;
+    border-radius: 50%;
+    width: var(--size);
+    height: var(--size);
+    margin: 10% auto;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 /* JSON Tree overrides */
 .jsontree_tree {
-    margin-left: 0;
-    font-size: 14pt;
+    margin: 0;
+    padding: 0;
+    font-size: 1.2em;
 }
 
 .jsontree_child-nodes {
