--- a/www/css/result.css
+++ b/www/css/result.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     flex: 1;
     padding: 0.5rem 0.75rem;
-    overflow: scroll;
+    overflow: auto;
     white-space: nowrap;
 }
 .result-title {
